--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,18 @@
+2017-01-06  Bob Duff  <duff@adacore.com>
+
+	* bindgen.adb (Gen_Adainit, Gen_Adafinal): Change
+	"Bind_Main_Program" to "not Bind_For_Library", because otherwise
+	we won't generate the call to s_stalib_adafinal when the main
+	is not written in Ada.
+
+2017-01-06  Bob Duff  <duff@adacore.com>
+
+	* sem_prag.adb: Minor: remove pragma Warnings.
+
+2017-01-06  Tristan Gingold  <gingold@adacore.com>
+
+	* Makefile.rtl: Do not compile s-stchop by default.
+
 2017-01-06  Patrick Bernardi  <bernardi@adacore.com>
 
 	* aspects.adb, aspects.ads, exp_ch3.adb, exp_ch9.adb, par-prag.adb,
