--- a/libdecnumber/ChangeLog
+++ b/libdecnumber/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-06  Martin Liska  <mliska@suse.cz>
+
+	PR bootstrap/79003
+	* Makefile.in: Add -fno-lto to {C,CPP,LD}FLAGS.
+
 2017-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
