* lto-partition.c (promote_symbol): Write to dump file sooner, 	include alias promoting too.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244159 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/lto/ChangeLog
+++ b/gcc/lto/ChangeLog
@@ -1,5 +1,8 @@
 2017-01-06  Nathan Sidwell  <nathan@acm.org>
 
+	* lto-partition.c (promote_symbol): Write to dump file sooner,
+	include alias promoting too.
+
 	* lto-partition.c (lto_balanced_map): Reformat/respell comment.
 	(may_need_named_section_p): Likewise.
 	(rename_statics): Likewise.
