--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-06  Barrett Adair  <barrettellisadair@gmail.com>
+	    Jonathan Wakely  <jwakely@redhat.com>
+
+	* include/std/variant (variant, swap): Replace __and_ usage with fold
+	expressions.
+
 2017-01-06  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	PR go/78978
