Add missing <cassert> include to testcase
	* testsuite/util/performance/priority_queue/mem_usage/pop_test.hpp:
	Include <cassert> header.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244176 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,5 +1,8 @@
 2017-01-06  Jonathan Wakely  <jwakely@redhat.com>
 
+	* testsuite/util/performance/priority_queue/mem_usage/pop_test.hpp:
+	Include <cassert> header.
+
 	PR libstdc++/78968
 	* crossconfig.m4: Check for __cxa_thread_atexit on *-*-freebsd*.
 	* configure: Regenerate.
