2017-01-06  Aaron Sawdey  <acsawdey@linux.vnet.ibm.com> 	* gcc.dg/memcmp-1.c: New. 	* gcc.dg/strncmp-1.c: New. New testcases to check that builtin expansion of memcmp and strncmp works properly.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244177 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-06  Aaron Sawdey  <acsawdey@linux.vnet.ibm.com>
+	* gcc.dg/memcmp-1.c: New.
+	* gcc.dg/strncmp-1.c: New.
+
 2017-01-06  Andre Vieira  <andre.simoesdiasvieira@arm.com>
 
 	* gcc.target/arm/acle/mcrr: New.
