* system.h (GCC_DIAGNOSTIC_PUSH_IGNORED, GCC_DIAGNOSTIC_POP, 	GCC_DIAGNOSTIC_STRINGIFY): Define.
	* simplify.c (simplify_transformation_to_array): Use
	GCC_DIAGNOSTIC_PUSH_IGNORED and GCC_DIAGNOSTIC_POP instead of
	#pragma GCC diagnostic {push,ignored,pop}.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244179 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2017-01-06  Jakub Jelinek  <jakub@redhat.com>
 
+	* system.h (GCC_DIAGNOSTIC_PUSH_IGNORED, GCC_DIAGNOSTIC_POP,
+	GCC_DIAGNOSTIC_STRINGIFY): Define.
+
 	* read-rtl.c (rtx_reader::read_rtx_code): Avoid -Wsign-compare
 	warning.
 
