--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,5 +1,8 @@
 2017-01-06  Jonathan Wakely  <jwakely@redhat.com>
 
+	* testsuite/21_strings/basic_string/operations/find/char/6.cc: New.
+	* testsuite/21_strings/basic_string/operations/find/wchar_t/6.cc: New.
+
 	* testsuite/util/performance/priority_queue/mem_usage/pop_test.hpp:
 	Include <cassert> header.
 
