PR translation/79018 	* params.def (PARAM_MAX_STORES_TO_MERGE): Add missing space between 	the and store.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244195 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR translation/79018
+	* params.def (PARAM_MAX_STORES_TO_MERGE): Add missing space between
+	the and store.
+
 2017-01-06  Mikael Pettersson  <mikpelinux@gmail.com>
 
 	PR target/57583
