--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-07  Martin Sebor  <msebor@redhat.com>
+
+	* gcc.dg/attr-alloc_size-3.c: Remove regex made redundant by r243461.
+	* gcc.dg/attr-alloc_size-4.c: Same.
+
 2017-01-07  Andre Vehreschild  <vehre@gcc.gnu.org>
 
 	* gfortran.dg/coarray/ptr_comp_1.f08: New test.
